# bids_loader

./: .gitattributes  Game_integration.md  README.rst  setup.cfg  setup.py
bids_loader/: _version.py  base.py
bids_loader/data/: README.md
bids_loader/stimuli/: game.py
tests/test_stimuli/: test_game.py
