[metadata]
url = https://github.com/bpinsard/bids_loader
author = Basile Pinsard
author_email = basile.pinsard@gmail.com
maintainer = Basile Pinsard
maintainer_email = basile.pinsard@gmail.com
description = Loader for BIDS dataset including in-progress extension, for modelling purposes
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = GPL
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.6
install_requires =
    pybids >= 0.13.2
    nilearn >= 0.8.1

packages = find:
include_package_data = False

[options.package_data]
* =
    data/*

[options.extras_require]
doc =
    sphinx
test =
    pytest
    coverage
all =
    %(doc)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = bids_loader/_version.py
versionfile_build = bids_loader/_version.py
tag_prefix =
parentdir_prefix =
